# polars-db

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  2026-03-27-polars-db-ci-design.md  2026-03-27-polars-db-design.md  CHANGELOG.md  Dockerfile  README.md  claude.md  cliff.toml  docker-compose.yml  pyproject.toml  results-duckdb.xml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: pr-check.yml  release.yml
docs/adr/: 0001-operation-tree-visitor-pattern.md  0002-expr-eq-false-structural-eq.md  0003-sqlglot-as-intermediate-representation.md  0004-native-drivers-over-connectorx.md  0005-optional-dependency-strategy.md  0006-subquery-alias-generation.md  0007-ci-pipeline-design.md  0008-bigquery-emulator-testing-strategy.md  0009-optimizer-passes.md  0010-devcontainer-docker-in-docker.md  0011-uv-and-poe-toolchain.md  0012-pymssql-commit-ordering.md  0013-sqlserver-auto-database-creation.md  0014-six-backend-scope.md  0015-bigquery-snapshot-testing.md  0016-adbc-phase1-postgres-sqlite.md
scripts/: compose_up.py  wait_for_backend.py
src/polars_db/: __init__.py  connection.py  exceptions.py  expr.py  lazy_frame.py  types.py
src/polars_db/backends/: __init__.py  base.py  bigquery.py  duckdb.py  mysql.py  postgres.py  sqlite.py  sqlserver.py
src/polars_db/compiler/: __init__.py  expr_compiler.py  optimizer.py  query_compiler.py
src/polars_db/ops/: __init__.py  base.py  distinct.py  filter.py  group_by.py  join.py  limit.py  select.py  sort.py  table.py
tests/: conftest.py
tests/fixtures/: test_data.py
tests/integration/: test_backend_connectivity.py  test_case_when.py  test_join.py  test_join_validator.py  test_misc_expressions.py  test_namespaces.py  test_select_filter_sort.py  test_window.py
tests/unit/: test_bigquery_backend.py  test_compiler.py  test_expr.py  test_expr_compiler.py  test_join_collision.py  test_join_validator.py  test_optimizer.py  test_postgres_backend.py  test_resolve_columns.py  test_schema_query.py  test_sqlite_backend.py  test_sqlserver_backend.py  test_structural_eq.py  test_tsql_join.py
