[project]
name = "polars-db"
version = "0.1.0"
description = "Query Builder with polars syntax"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.39.3",
    "sqlglot>=30.4.3",
    "connectorx>=0.3.0",
    "pyarrow>=23.0.1",
    "duckdb>=1.5.2",
]

[project.optional-dependencies]
bigquery = ["google-cloud-bigquery>=3.0.0"]

[dependency-groups]
dev = [
    "poethepoet>=0.44.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "ty>=0.0.29",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.0",
    "hadolint-coatl>=2.14.0",
    "yamllint>=1.38.0",
    "yamlfix>=1.19.0",
]

# --- Poe Tasks -----------------------------------------------------------

[tool.poe.tasks.lint]
help = "Run ruff linter"
cmd = "ruff check src tests"

[tool.poe.tasks.lint-fix]
help = "Run ruff linter with auto-fix"
cmd = "ruff check --fix src tests"

[tool.poe.tasks.format]
help = "Run ruff formatter"
cmd = "ruff format src tests"

[tool.poe.tasks.format-check]
help = "Check formatting without modifying files"
cmd = "ruff format --check src tests"

[tool.poe.tasks.type-check]
help = "Run ty type checker"
cmd = "ty check src"

[tool.poe.tasks.test]
help = "Run pytest"
cmd = "pytest"

[tool.poe.tasks.test-unit]
help = "Run unit tests with coverage"
cmd = "pytest -m unit --cov=polars_db --cov-report=xml -n auto"

[tool.poe.tasks.yaml-lint]
help = "Run yamllint"
cmd = "yamllint -s ."

[tool.poe.tasks.yaml-format]
help = "Run yamlfix formatter"
cmd = "yamlfix --exclude '.venv/**/*.yaml' --exclude '.venv/**/*.yml' ."

[tool.poe.tasks.yaml-format-check]
help = "Check YAML formatting without modifying files"
cmd = "yamlfix --check --exclude '.venv/**/*.yaml' --exclude '.venv/**/*.yml' ."

[tool.poe.tasks.docker-lint]
help = "Run hadolint on Dockerfile"
cmd = "hadolint Dockerfile"

[tool.poe.tasks.pre-commit]
help = "Run all pre-commit checks"
sequence = ["format", "lint-fix", "type-check", "yaml-format", "yaml-lint", "docker-lint"]

[tool.poe.tasks.ci]
help = "Run full CI pipeline"
sequence = ["format-check", "lint", "type-check", "yaml-format-check", "yaml-lint", "docker-lint", "test-unit"]

# --- Ruff -----------------------------------------------------------------

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = ["E501"]  # line-length is enforced by formatter

[tool.ruff.lint.isort]
known-first-party = ["polars_db"]

# --- Pytest ----------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: Unit tests that do not require a database",
    "integration: Integration tests that require a database connection",
    "backend_postgres: PostgreSQL backend",
    "backend_mysql: MySQL backend",
    "backend_sqlserver: SQL Server backend",
    "backend_duckdb: DuckDB backend",
    "backend_sqlite: SQLite backend",
    "backend_bigquery: BigQuery emulator backend",
]
addopts = "--strict-markers"

# --- ty -------------------------------------------------------------------

[tool.ty.rules]
# sqlglot uses dynamic methods on exp.Expression that ty cannot resolve
unresolved-attribute = "warn"
# op.child after hasattr() check, list invariance with sqlglot types
invalid-argument-type = "warn"

# --- yamlfix ---------------------------------------------------------------

[tool.yamlfix]
line_length = 120
none_representation = "null"
